--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Skyhitz Common Module for State management",
   "author": "Alejo Mendoza",
   "license": "MIT",
-  "main": "index.js",
+  "main": "index.ts",
   "engineStrict": true,
   "engines": {
     "node": "6.11.1"
