--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
   },
   "dependencies": {
     "@types/node": "^8.0.31",
-    "@types/node-fetch": "^1.6.7",
     "@types/react-native": "^0.48.9",
     "apollo-client": "^1.9.3",
+    "fetch-everywhere": "^1.0.5",
     "fn-extractor": "skyhitz/fn-extractor",
     "function-extractor": "skyhitz/function-extractor",
     "graphql-tag": "^2.4.2",
     "immutable": "^3.8.1",
     "lodash.merge": "4.6.0",
     "mobx": "^3.3.0",
-    "node-fetch": "^1.7.3",
     "ts-node": "3.1.0",
     "typescript": "^2.2.2"
   },
