--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^2.2.2"
   },
   "devDependencies": {
+    "react-native": "^0.48",
     "tslint": "^5.5.0"
   },
   "peerDependencies": {
