--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "apollo-client": "^1.9.3",
     "fetch-everywhere": "^1.0.5",
     "fn-extractor": "skyhitz/fn-extractor",
-    "function-extractor": "skyhitz/function-extractor",
+    "function-extractor": "skyhitz/function-extractor#89ad5bd63daa804f4fddfd45484a32cd2060ea6d",
     "graphql-tag": "^2.4.2",
     "immutable": "^3.8.1",
     "lodash.merge": "4.6.0",
