--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skyhitz-common",
-  "version": "0.0.7",
+  "version": "0.0.15",
   "description": "Skyhitz Common Module for State management",
   "author": "Alejo Mendoza",
   "license": "MIT",
@@ -18,6 +18,7 @@
     "function-extractor": "skyhitz/function-extractor#89ad5bd63daa804f4fddfd45484a32cd2060ea6d",
     "graphql-tag": "^2.4.2",
     "immutable": "^3.8.1",
+    "lodash.debounce": "^4.0.8",
     "lodash.merge": "4.6.0",
     "mobx": "^3.3.0",
     "typescript": "^2.2.2"
