--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "ts-node": "3.1.0",
     "tslint": "^5.5.0"
   },
-  "peerDependencies": {
+  "optionalDependencies": {
     "react-native": "^0.48"
   }
 }
