--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "license": "MIT",
   "main": "index.ts",
   "dependencies": {
+    "@types/algoliasearch": "^3.30.1",
     "@types/node": "^8.0.31",
     "@types/react-native": "^0.48.9",
+    "algoliasearch": "^3.32.0",
     "apollo-client": "^1.9.3",
     "fetch-everywhere": "^1.0.5",
     "graphql-tag": "^2.4.2",
