--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Skyhitz Common Module for State management",
   "author": "Alejo Mendoza",
   "license": "MIT",
-  "main": "index.production.ts",
+  "main": "index.ts",
   "dependencies": {
     "@types/algoliasearch": "^3.30.1",
     "@types/node": "^8.0.31",
