--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "immutable": "^3.8.1",
     "lodash.debounce": "^4.0.8",
     "lodash.merge": "4.6.0",
-    "mobx": "^3.3.0",
+    "mobx": "5.10.0",
     "typescript": "^2.2.2"
   },
   "devDependencies": {
